# reseau_JV_godot_extension

./: .gitignore  CMakeLists.txt  README.md  SConstruct
network_core/: CMakeLists.txt  Makefile
network_core/includes/: message_factory.hpp  serializer.hpp
network_core/includes/gameplay/: common_tools.hpp  gameplay_payload.hpp  snapshot.hpp
network_core/includes/messages/: base_message.hpp  gameplay_message.hpp  helo_message.hpp  input_message.hpp  rtt_message.hpp  text_message.hpp
network_core/src/: message_factory.cpp  serializer.cpp
network_core/src/gameplay/: snapshot.cpp
network_core/src/messages/: base_message.cpp  gameplay_message.cpp  helo_message.cpp  input_message.cpp  rtt_message.cpp  text_message.cpp
project/: example.gd  example.tscn  export_presets.cfg  gd_input_manager.gd  godot cpp template.pck  project.godot
server/: CMakeLists.txt  Makefile
server/includes/ecs/: ECS_server.hpp  entity_manager.hpp
server/includes/network/: client_manager.hpp  packet_manager.hpp  server.hpp
server/src/: main.cpp
server/src/ecs/: ECS_server.cpp  entity_manager.cpp
server/src/network/: client_manager.cpp  packet_manager.cpp  server.cpp
src/: register_types.cpp  summator.cpp  summator.h
src/Entities/: GDEntity.cpp  GDEntity.h  GDEntityManager.cpp  GDEntityManager.h
src/Network/: BaseMessage.tpp  GDNetworkManager.cpp  GDNetworkManager.h  Messages.h
src/Network/Messages/: GDBaseMessage.cpp  GDBaseMessage.h  GDGameplayMessage.cpp  GDGameplayMessage.h  GDHELOMessage.cpp  GDHELOMessage.h  GDInputMessage.cpp  GDInputMessage.h  GDTextMessage.cpp  (+1 more)
(+4 files in other folders)
